Changelog for Collections.

- Fixed View button
- Fixed logging messages from plugin

Collections 2.0.2
===================
- Fixed datetime renderers

Collections 2.0.1
===================
- Fixed saving collections container in Revolution 2.2.x

Collections 2.0.0
===================
- Added collections templates
- Added ability to create different child type from grid
- Support for Revolution 2.3

Collections 1.3.3
===================
- Remove debugger call :X

Collections 1.3.2
===================
- Hotfix for confirm navigation dialog
- Fixed selecting multiple rows
- Fixed checking for Tagger

Collections 1.3.1
===================
- Release with correct version number

Collections 1.3.0
===================
- Support for Tagger in search field in Children tab
- Added ability to drag and drop child to resource tree to change parent
- English and German lexicon updates

Collections 1.2.0
===================
- Added ability to search via created by full name
- Added ability to search via created by username
- Fixed switching child between two Collections
- Fixed switching great parent to Collections when moving last child
- Fixed child name after creating a duplicate
- Added drag & drop sort by menuindex

Collections 1.1.1
===================
- #20 Fixed after re-save child set show_in_tree 1

Collections 1.1.0
===================
- #9 Added duplicate button
- #10 Added icon for Collection into the Resource tree
- #11 Make grid stateful and added some more columns (until clearing cache grid keeps showed/hidden columns and their order)
- Renamed "Collection container" to "Collection"
- #7 Added German translation (thanks to pepebe)
- #12 Added Czech translation
- #14 Added Dutch translation (thanks to @mark_hamstra)
- #15 Added French translation (thanks to @rtripault)
- #16 #17 Added Russian translation (thanks to vanchelo)
- #18 Fixed show_in_tree conflict

Collections 1.0.0
===================
- Published in MODX extras

Collections 0.8.2
===================