@@ -3,7 +3,7 @@
     ,"lowCaseName": "collections"
     ,"description": "Hides resources under this container in tree. Adding grid int o the update resource panel."
     ,"author": "Jan Peca"
-    ,"version": "2.0.2"
+    ,"version": "2.1.0"
     ,"package":{
         "actions": [{
             "id": 1
